Changelog

20170511
Began work on creating summon entity

20170508
Made improvements to Entity

20170506
Created file for unit tests

20170504
Created initial file for Card, created first Card (Basicmove)

20170502
Created Changelog

20170501
Added initial files for Entity and Stage